<resources>
    <string name="app_name">DeadDrop</string>

    <string name="contacts">Contacts</string>
    <string name="messages">Messages</string>
    <string name="log">Log</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_toggle_wifi">Turn Wifi On / Off</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_identity">IdentityActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="idName">Name</string>
    <string name="idMail">E-Mail</string>
    <string name="idHint">Fill out the form</string>
    <string name="idBtn">OK</string>

    <string name="contactsName">Name:</string>
    <string name="contactsFingerprint">Fingerprint:</string>

    <string name="logCon">Connection</string>
    <string name="logKB">KB</string>
    <string name="logAll">All</string>

    <string name="msgFrom">From:</string>
    <string name="msgName">Name Value</string>
    <string name="msgDate">Date Value</string>
    <string name="msgSubjectLabel">Subject:</string>
    <string name="msgSubject">Subject Value</string>
    <string name="msgCount">0 Message(s)</string>
    <string name="msgTo">To:</string>
    <string name="msgVia">Via:</string>
    <string name="msgSend">Send</string>
</resources>
